--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Youni</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<!-- End Bootstrap -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="row">
+	
+	<div class="anim col-md-4" style="position: fixed; top:5%;">
+		<img class="img-responsive" src="img/screen.png">
+	</div>
 
+	<div class="plays col-md-3" style="position: fixed; right: 10%;">
+		<h1 style="font-family: 'Roboto', sans-serif;font-weight: 400; font-size: 5em;">Certification App</h1>
+		<!-- <p>Get it from Google Play Store</p> -->
+		<img src="img/gp.png" height="100" width="300">
+	</div>
+
+</div>
 </body>
 </html>
