--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="row">
+<div class="container">
 	
-	<div class="anim col-md-4" style="position: fixed; top:5%;">
-		<img class="img-responsive" src="img/screen.png">
+	<div class="anim col-md-4 col-xs-8" style="position: fixed; top:5%;">
+		<img class="img-responsive imgs">
 	</div>
 
-	<div class="plays col-md-3" style="position: fixed; right: 10%;">
-		<h1 style="font-family: 'Roboto', sans-serif;font-weight: 400; font-size: 5em;">Certification App</h1>
-		<!-- <p>Get it from Google Play Store</p> -->
-		<img src="img/gp.png" height="100" width="300">
+	<div class="plays col-md-3 col-xs-10" style="position: fixed;">
+		<h1 style="">Youni</h1>
+		<p style="">The Certification App</p>
+		<img class="img-responsive" src="img/gp.png" height="100" width="300">
 	</div>
 
 </div>
